--- a/doc/technical_appendix/technical_appendix.tex
+++ b/doc/technical_appendix/technical_appendix.tex
@@ -95,39 +95,21 @@
     sorts, support for constants, the maximum number of variables, and supported
     quantifiers, respectively. The last column lists supported atoms in addition
     to those of the form $P(\mathbf{t})$ for a predicate $P/n$ and an $n$-tuple
-    of terms $\mathbf{t}$. Here: $k$ and $m$ are non-negative integers, with the
-    latter depending on the domain size, $P$ represents a predicate, and $x$ and
-    $y$ are terms. }\label{tbl:logics}
+    of terms $\mathbf{t}$. Here $k$ and $m$ are non-negative integers, with the
+    latter depending on the domain size, $P$ is a predicate, and $x$ and $y$ are
+    terms. }\label{tbl:logics}
 \end{table}
 
-\todo[inline,caption={}]{
-  \begin{itemize}
-    \item Reference the table
-    \item Make sure the rest of the paper doesn't refer to these logics (or
-          describe examples in them)
-    \item Move the URLs to the main text (and make sure that each algorithm name
-          is combined with a citation at least once)
-    \item Later (probably) move this to a different file
-  \end{itemize}
-}
-
-\renewcommand*{\thefootnote}{\fnsymbol{footnote}}
-
 There are three first-order logics commonly used in FOMC: \FO{}, \Ctwo{}, and
-\UFO{}. First, \FO{} is the input format for
-\textsc{ForcLift}\footnote{\url{https://github.com/UCLA-StarAI/Forclift}} and
-its extensions
-\textsc{Crane}\footnote{\url{https://doi.org/10.5281/zenodo.8004077}} and
-\Cranetwo{}. Second, \Ctwo{} is often used in the literature on
-\textsc{FastWFOMC}\footnote{\url{https://github.com/jan-toth/FastWFOMC.jl}} and
+\UFO{}. \Cref{tbl:logics} summarises the key differences among them. \FO{} is
+the input format for \textsc{ForcLift} and its extensions \textsc{Crane} and
+\Cranetwo{}. \Ctwo{} is often used in the literature on \textsc{FastWFOMC} and
 related methods~\cite{DBLP:journals/jair/Kuzelka21,DBLP:conf/aaai/MalhotraS22}.
 Finally, \UFO{} is the input format supported by the most recent implementation
 of \textsc{FastWFOMC}~\cite{DBLP:conf/kr/TothK24}. All three logics are
 function-free, and domains are always assumed to be finite. As usual, we
 presuppose the \emph{unique name assumption}, which states that two constants
 are equal if and only if they are the same constant~\cite{DBLP:books/aw/RN2020}.
-
-\renewcommand*{\thefootnote}{\arabic{footnote}}
 
 In \FO{}, each term is assigned to a \emph{sort}, and each predicate $P/n$ is
 assigned to a sequence of $n$ sorts. Each sort has its corresponding domain.
@@ -139,8 +121,8 @@ that $x$ and $y$ have different sorts, and it would be improper to write, for
 example, $\forall x \in \Delta\text{. }\forall y \in \Gamma\text{.
 } P(x, y) \lor x = y$. \FO{} is also the only logic to support constants,
 sentences with more than two variables, and the equality predicate. While we do
-not explicitly refer to sorts in subsequent sections of this paper, the
-many-sorted nature of \FO{} is paramount to the algorithms presented therein.
+not explicitly refer to sorts in the paper, the many-sorted nature of \FO{} is
+paramount to the algorithms presented therein.
 
 \begin{remark*}
   In the case of \textsc{ForcLift} and its extensions, support for a sentence as
@@ -164,22 +146,22 @@ incorporates \emph{(equality) cardinality constraints}. For example, $|P| = 3$
 constrains all models to have \emph{precisely three positive literals with the
   predicate $P$}.
 
-\subsection{Our Benchmarks in \Ctwo{} and \UFO{}}
-
-\todo[inline,caption={}]{
-  \begin{itemize}
-    \item An introductory paragraph
-    \item Figure out the right order in which the information below should be
-          presented
-    \item Make the text below coherent
-    \item Refer to it in the main text (and make sure the reference sticks when
-          I transfer this to a separate file)
-  \end{itemize}
-}
-
-\friends{} in \Ctwo{} and \UFO{} is the same as in \FO{}.
-
-For \bijections{}, the equivalent sentence in \Ctwo{} is
+\paragraph*{Our Benchmarks in \Ctwo{} and \UFO{}}
+For completeness and reproducibility, let us translate the benchmark sentences
+from \FO{} to \Ctwo{} and \UFO{}. As \friends{} is a relatively simple sentence,
+it remains the same in \Ctwo{} and \UFO{}. For \functions{}, in \Ctwo{} one
+would write
+\[
+  \forall x \in \Delta\text{. }\exists^{=1} y \in \Delta\text{. }P(x, y).
+\]
+In \UFO{}, the same could be written as
+\begin{equation}\label[formula]{eq:functions1}
+  (\forall x, y \in \Delta\text{. }S(x) \lor \neg P(x, y)) \land (|P| = |\Delta|),
+\end{equation}
+where $w^{-}(S) = -1$. Although \cref{eq:functions1} has more models compared to
+its counterpart in \Ctwo{}, the negative weight $w^{-}(S) = -1$ makes some of
+the terms in the definition of WFOMC cancel out. The translation of
+\bijections{} is similar to that of \functions{}. In \Ctwo{}, one could write
 \[
   (\forall x \in \Delta\text{. }\exists^{=1} y \in \Delta\text{.
   }P(x, y)) \land (\forall y \in \Delta\text{. }\exists^{=1} x \in \Delta\text{.
@@ -192,16 +174,6 @@ Similarly, in \UFO{} the same sentence can be written as
   }S(x) \lor \neg P(y, x)) \land (|P| = |\Delta|),
 \]
 where $w^{-}(R) = w^{-}(S) = -1$.
-
-For \functions{}, in \Ctwo{} one would write $\forall x \in \Delta\text{.
-}\exists^{=1} y \in \Delta\text{. }P(x, y)$. In \UFO{}, the same could be
-written as
-\begin{equation}\label[formula]{eq:functions1}
-  (\forall x, y \in \Delta\text{. }S(x) \lor \neg P(x, y)) \land (|P| = |\Delta|),
-\end{equation}
-where $w^{-}(S) = -1$. Although \cref{eq:functions1} has more models compared to
-its counterpart in \Ctwo{}, the negative weight $w^{-}(S) = -1$ makes some of
-the terms in the definition of WFOMC cancel out.
 
 \bibliography{../paper/paper.bib}
 
