--- a/doc/technical_appendix/technical_appendix.tex
+++ b/doc/technical_appendix/technical_appendix.tex
@@ -1,22 +1,7 @@
 \documentclass[a4paper,UKenglish,cleveref, autoref, thm-restate]{lipics-v2021}
-%This is a template for producing LIPIcs articles. 
-%See lipics-v2021-authors-guidelines.pdf for further information.
-%for A4 paper format use option "a4paper", for US-letter use option "letterpaper"
-%for british hyphenation rules use option "UKenglish", for american hyphenation rules use option "USenglish"
-%for section-numbered lemmas etc., use "numberwithinsect"
-%for enabling cleveref support, use "cleveref"
-%for enabling autoref support, use "autoref"
-%for anonymousing the authors (e.g. for double-blind review), add "anonymous"
-%for enabling thm-restate support, use "thm-restate"
-%for enabling a two-column layout for the author/affilation part (only applicable for > 6 authors), use "authorcolumns"
-%for producing a PDF according the PDF/A standard, add "pdfa"
-
-\pdfoutput=1 %uncomment to ensure pdflatex processing (mandatatory e.g. to submit to arXiv)
-\hideLIPIcs  %uncomment to remove references to LIPIcs series (logo, DOI, ...), e.g. when preparing a pre-final version to be uploaded to arXiv or another public repository
-
-%\graphicspath{{./graphics/}}%helpful if your graphic files are in another directory
-
-\bibliographystyle{plainurl}% the mandatory bibstyle
+\pdfoutput=1
+\hideLIPIcs
+\bibliographystyle{plainurl}
 
 \title{Towards Practical First-Order Model Counting: Technical Appendix}
 
@@ -28,20 +13,8 @@
 \authorrunning{A.\,K. Kidambi, G. Singh, P. Dilkas, and K.\,S. Meel}
 \Copyright{Ananth K. Kidambi, Guramrit Singh, Paulius Dilkas, and Kuldeep S. Meel}
 
-\relatedversion{} %optional, e.g. full version hosted on arXiv, HAL, or other respository/website
+\relatedversion{}
 
-%\supplement{}%optional, e.g. related research data, source code, ... hosted on a repository like zenodo, figshare, GitHub, ...
-%\supplementdetails[linktext={opt. text shown instead of the URL}, cite=DBLP:books/mk/GrayR93, subcategory={Description, Subcategory}, swhid={Software Heritage Identifier}]{General Classification (e.g. Software, Dataset, Model, ...)}{URL to related version} %linktext, cite, and subcategory are optional
-
-%\funding{(Optional) general funding statement \dots}%optional, to capture a funding statement, which applies to all authors. Please enter author specific funding statements as fifth argument of the \author macro.
-
-%\acknowledgements{I want to thank \dots}%optional
-
-%\nolinenumbers %uncomment to disable line numbering
-
-
-
-%Editor-only macros:: begin (do not touch as author)%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \EventEditors{John Q. Open and Joan R. Access}
 \EventNoEds{2}
 \EventLongTitle{42nd Conference on Very Important Topics (CVIT 2016)}
@@ -53,11 +26,9 @@
 \EventLogo{}
 \SeriesVolume{42}
 \ArticleNo{23}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \usepackage{booktabs}
 \usepackage{pifont}
-\usepackage[backgroundcolor=lightgray]{todonotes} % TODO: temporary
 
 \newcommand{\cmark}{\ding{51}}
 \newcommand{\xmark}{\ding{55}}
@@ -70,7 +41,7 @@
 \newcommand{\bijections}{\emph{Bijections}}
 
 \crefalias{formula}{equation}
-\crefname{formula}{Sentence}{Sentences}
+\crefname{formula}{sentence}{sentences}
 \creflabelformat{formula}{#2\textup{(#1)}#3}
 
 \begin{document}
@@ -91,31 +62,32 @@
     \bottomrule
   \end{tabular}
   \caption{A comparison of the three logics used in FOMC\@. The
-    2\textsuperscript{nd}--5\textsuperscript{th} columns refer to: the number of
+    2\textsuperscript{nd}--5\textsuperscript{th} columns refer to the number of
     sorts, support for constants, the maximum number of variables, and supported
     quantifiers, respectively. The last column lists supported atoms in addition
     to those of the form $P(\mathbf{t})$ for a predicate $P/n$ and an $n$-tuple
-    of terms $\mathbf{t}$. Here $k$ and $m$ are non-negative integers, with the
-    latter depending on the domain size, $P$ is a predicate, and $x$ and $y$ are
-    terms. }\label{tbl:logics}
+    of terms $\mathbf{t}$. Here, $k$ and $m$ are non-negative integers, where
+    $m$ depends on the domain size, $P$ is a predicate, and $x$ and $y$ are
+    terms.}\label{tbl:logics}
 \end{table}
 
-There are three first-order logics commonly used in FOMC: \FO{}, \Ctwo{}, and
+FOMC commonly utilises three types of first-order logic: \FO{}, \Ctwo{}, and
 \UFO{}. \Cref{tbl:logics} summarises the key differences among them. \FO{} is
 the input format for \textsc{ForcLift} and its extensions \textsc{Crane} and
 \Cranetwo{}. \Ctwo{} is often used in the literature on \textsc{FastWFOMC} and
 related methods~\cite{DBLP:journals/jair/Kuzelka21,DBLP:conf/aaai/MalhotraS22}.
-Finally, \UFO{} is the input format supported by the most recent implementation
-of \textsc{FastWFOMC}~\cite{DBLP:conf/kr/TothK24}. All three logics are
+(Note that no algorithm accepts \Ctwo{} as input.) Finally, \UFO{} is the input
+format supported by the most recent implementation of
+\textsc{FastWFOMC}~\cite{DBLP:conf/kr/TothK24}. All three logics are
 function-free, and domains are always assumed to be finite. As usual, we
 presuppose the \emph{unique name assumption}, which states that two constants
 are equal if and only if they are the same constant~\cite{DBLP:books/aw/RN2020}.
 
-In \FO{}, each term is assigned to a \emph{sort}, and each predicate $P/n$ is
-assigned to a sequence of $n$ sorts. Each sort has its corresponding domain.
-These assignments to sorts are typically left implicit and can be reconstructed
-from the quantifiers. For example, $\forall x,y \in \Delta\text{. }P(x, y)$
-implies that variables $x$ and $y$ have the same sort. On the other hand,
+In \FO{}, each term has a designated \emph{sort}, and each predicate $P/n$
+corresponds to a sequence of $n$ sorts. Each sort has its corresponding domain.
+These assignments to sorts are typically left implicit and follow from the
+quantifiers, e.g., $\forall x,y \in \Delta\text{. }P(x, y)$ implies that the
+variables $x$ and $y$ have the same sort. On the other hand,
 $\forall x \in \Delta\text{. }\forall y \in \Gamma\text{. } P(x, y)$ implies
 that $x$ and $y$ have different sorts, and it would be improper to write, for
 example, $\forall x \in \Delta\text{. }\forall y \in \Gamma\text{.
@@ -127,9 +99,9 @@ paramount to the algorithms presented therein.
 \begin{remark*}
   In the case of \textsc{ForcLift} and its extensions, support for a sentence as
   valid input does not imply that the algorithm can compile the sentence into a
-  circuit or graph suitable for lifted model counting. However, it is known that
-  \textsc{ForcLift} compilation is guaranteed to succeed on any \FO{} sentence
-  without constants and with at most two
+  circuit or graph suitable for lifted model counting. However,
+  \textsc{ForcLift} compilation always succeeds on any \FO{} sentence without
+  constants and with at most two
   variables~\cite{DBLP:conf/nips/Broeck11,DBLP:conf/kr/BroeckMD14}.
 \end{remark*}
 
@@ -148,26 +120,26 @@ constrains all models to have \emph{precisely three positive literals with the
 
 \paragraph*{Our Benchmarks in \Ctwo{} and \UFO{}}
 For completeness and reproducibility, let us translate the benchmark sentences
-from \FO{} to \Ctwo{} and \UFO{}. As \friends{} is a relatively simple sentence,
-it remains the same in \Ctwo{} and \UFO{}. For \functions{}, in \Ctwo{} one
-would write
+from \FO{} to \Ctwo{} and \UFO{}. Since \friends{} is a relatively simple
+sentence, it remains the same in \Ctwo{} and \UFO{}. For \functions{}, in
+\Ctwo{}, one would write
 \[
   \forall x \in \Delta\text{. }\exists^{=1} y \in \Delta\text{. }P(x, y).
 \]
-In \UFO{}, the same could be written as
+In \UFO{}, the equivalent formulation is
 \begin{equation}\label[formula]{eq:functions1}
   (\forall x, y \in \Delta\text{. }S(x) \lor \neg P(x, y)) \land (|P| = |\Delta|),
 \end{equation}
-where $w^{-}(S) = -1$. Although \cref{eq:functions1} has more models compared to
-its counterpart in \Ctwo{}, the negative weight $w^{-}(S) = -1$ makes some of
-the terms in the definition of WFOMC cancel out. The translation of
-\bijections{} is similar to that of \functions{}. In \Ctwo{}, one could write
+where $w^{-}(S) = -1$. Although \cref{eq:functions1} has more models than its
+counterpart in \Ctwo{}, the negative weight $w^{-}(S) = -1$ causes some of the
+terms in the definition of WFOMC to cancel out. The translation of \bijections{}
+is similar to that of \functions{}. In \Ctwo{}, one could write
 \[
   (\forall x \in \Delta\text{. }\exists^{=1} y \in \Delta\text{.
   }P(x, y)) \land (\forall y \in \Delta\text{. }\exists^{=1} x \in \Delta\text{.
   }P(x, y)).
 \]
-Similarly, in \UFO{} the same sentence can be written as
+Similarly, in \UFO{}, the equivalent formulation is
 \[
   (\forall x, y \in \Delta\text{.
   }R(x) \lor \neg P(x, y)) \land (\forall x, y \in \Delta\text{.
