Remove arxiv version (for now) and update conference info

--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -1,6 +1,5 @@
-\documentclass[a4paper,UKenglish,cleveref, autoref, thm-restate]{lipics-v2021}
+\documentclass[a4paper,UKenglish,cleveref,autoref,thm-restate]{lipics-v2021}
 \pdfoutput=1
-\hideLIPIcs
 \bibliographystyle{plainurl}
 
 \title{Towards Practical First-Order Model Counting}
@@ -17,7 +16,7 @@
 \ccsdesc{Theory of computation~Logic and verification}
 \ccsdesc{Mathematics of computing~Combinatorics}
 
-\keywords{first-order model counting, knowledge compilation, lifted inference}
+\keywords{First-order model counting, knowledge compilation, lifted inference}
 
 \relatedversion{}
 
@@ -29,18 +28,19 @@
 \acknowledgements{The first two authors contributed equally. Part of the
   research was conducted while all authors were at the National University of
   Singapore.}
+\nolinenumbers
 
-\EventEditors{John Q. Open and Joan R. Access}
+\EventEditors{Jeremias Berg and Jakob Nordstr\"{o}m}
 \EventNoEds{2}
-\EventLongTitle{42nd Conference on Very Important Topics (CVIT 2016)}
-\EventShortTitle{CVIT 2016}
-\EventAcronym{CVIT}
-\EventYear{2016}
-\EventDate{December 24--27, 2016}
-\EventLocation{Little Whinging, United Kingdom}
+\EventLongTitle{28th International Conference on Theory and Applications of Satisfiability Testing (SAT 2025)}
+\EventShortTitle{SAT 2025}
+\EventAcronym{SAT}
+\EventYear{2025}
+\EventDate{August 12--15, 2025}
+\EventLocation{Glasgow, Scotland}
 \EventLogo{}
-\SeriesVolume{42}
-\ArticleNo{23}
+\SeriesVolume{341}
+\ArticleNo{5}
 
 \usepackage[linesnumbered,ruled,vlined]{algorithm2e}
 \usepackage{siunitx}
